--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
    <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body class="control-sidebar-slide-open layout-fixed sidebar-mini-md sidebar-closed sidebar-collapse">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -79,7 +79,7 @@
   <!-- ChartJS -->
   <script src="%PUBLIC_URL%/assets/plugins/chart.js/Chart.min.js"></script>
   <!-- Sparkline -->
-  <script src="%PUBLIC_URL%/assets/plugins/sparklines/sparkline.js"></script>
+  <!-- <script src="%PUBLIC_URL%/assets/plugins/sparklines/sparkline.js"></script> -->
   <!-- JQVMap -->
   <script src="%PUBLIC_URL%/assets/plugins/jqvmap/jquery.vmap.min.js"></script>
   <script src="%PUBLIC_URL%/assets/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
@@ -95,11 +95,11 @@
   <!-- overlayScrollbars -->
   <script src="%PUBLIC_URL%/assets/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
   <!-- AdminLTE App -->
-  <!-- <script src="%PUBLIC_URL%/assets/dist/js/adminlte.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/dist/js/adminlte.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.min.js"></script>-->
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="%PUBLIC_URL%/assets/dist/js/pages/dashboard.js"></script>
+  <!-- <script src="%PUBLIC_URL%/assets/dist/js/pages/dashboard.js"></script> -->
   <!-- AdminLTE for demo purposes -->
-  <script src="%PUBLIC_URL%/assets/dist/js/demo.js"></script>
+  <!-- <script src="%PUBLIC_URL%/assets/dist/js/demo.js"></script> -->
   </body>
 </html>
